fix layout bug on firefox

--- a/apparelrow/media/src/screen.sass
+++ b/apparelrow/media/src/screen.sass
@@ -15,6 +15,7 @@ body
     +container
     +clearfix
   .sidebar
+    clear: left
     +float-left
     width: $aside_width
     margin-right: $gutter_width
